trying to balance functionality and user experience;

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 </head>
 <body>
 <button id="themeToggle">☀️</button>
-<textarea id="editor" placeholder="Paste or drag your JavaScript code here"></textarea>
+<div id="wrapper">
+  <div id="editor" contenteditable="true" spellcheck="false" 
+       placeholder="Paste or drag your JavaScript code here"></div>
+</div>
 <script src="script.js"></script>
 </body>
 </html>
+
