new button for a new toggle

--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<title>Beautifly</title>
-<link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>Beautifly</title>
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-<button id="themeToggle">☀️</button>
-<div id="wrapper">
-  <div id="editor" contenteditable="true" spellcheck="false" 
-       placeholder="Paste or drag your JavaScript code here"></div>
-</div>
-<script src="script.js"></script>
+  <button id="theme-toggle" aria-label="Toggle theme">
+    <img id="theme-icon" src="./images/moon.png" alt="Toggle theme" width="24" height="24">
+  </button>
+  <div id="wrapper">
+    <div id="editor" contenteditable="true" spellcheck="false" placeholder="Paste or drag your JavaScript code here">
+    </div>
+  </div>
+  <script src="./script.js"></script>
 
 </body>
-</html>
 
+</html>
